@@ -1,5 +1,6 @@
 package com.jiantai.talent.util;
 
+import org.apache.tomcat.util.codec.binary.Base64;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.BeanWrapper;
 import org.springframework.beans.BeanWrapperImpl;
@@ -7,6 +8,7 @@ import sun.misc.BASE64Decoder;
 import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
+import javax.servlet.http.HttpServletResponse;
 import java.awt.image.BufferedImage;
 import java.io.*;
 import java.net.MalformedURLException;
@@ -41,7 +43,7 @@ public class MyUtils {
     /**
      * 将本地图片进行Base64位编码
      *
-     * @param imageFile
+     * @param src
      *            图片的url路径，如http://.....xx.jpg
      * @return
      */
@@ -71,15 +73,27 @@ public class MyUtils {
      */
     public static void decodeBase64ToImage(String base64, String path,
                                            String imgName) {
-        BASE64Decoder decoder = new BASE64Decoder();
+//        BASE64Decoder decoder = new BASE64Decoder();
+//        try {
+//            FileOutputStream write = new FileOutputStream(new File(path
+//                    + imgName));
+//            byte[] decoderBytes = decoder.decodeBuffer(base64);
+//            write.write(decoderBytes);
+//            write.close();
+//        } catch (IOException e) {
+//            e.printStackTrace();
+//        }
+        byte[] base64Byte = Base64.decodeBase64(base64);
+
         try {
-            FileOutputStream write = new FileOutputStream(new File(path
-                    + imgName));
-            byte[] decoderBytes = decoder.decodeBuffer(base64);
-            write.write(decoderBytes);
-            write.close();
-        } catch (IOException e) {
+            OutputStream out = new FileOutputStream(path +imgName);
+            out.write(base64Byte);
+            out.flush();
+            out.close();
+            //return true;
+        } catch (Exception e) {
             e.printStackTrace();
+            //return false;
         }
     }
     /**
@@ -99,4 +113,35 @@ public class MyUtils {
             fd = null;
         }
     }
+    /**
+     * 下载本地文件
+     * @param response
+     * @param filePath
+     * @param encode
+     */
+    public static void downloadFile(HttpServletResponse response, String filePath, String encode) {
+        response.setContentType("text/html;charset=" + encode);
+        try {
+            // 读到流中
+            InputStream inStream = new FileInputStream(filePath); // 文件的存放路径
+            // path是指欲下载的文件的路径
+            File file = new File(filePath);
+            // 取得文件名
+            String fileName = file.getName();
+            // 设置输出的格式
+            response.reset();
+            response.setContentType("bin");
+            response.addHeader("Content-Disposition", "attachment; filename=\"" + new String(fileName.getBytes(encode), "ISO8859-1") + "\"");
+            // 循环取出流中的数据
+            byte[] b = new byte[100];
+            int len;
+            while ((len = inStream.read(b)) > 0) {
+                response.getOutputStream().write(b, 0, len);
+            }
+            inStream.close();
+        } catch (IOException  e) {
+            System.out.println(e);
+        }
+    }
+
 }
